@@ -458,6 +458,7 @@ Zbyszek Jędrzejewski-Szmek
 Drew Jenkins
 Flemming Kjær Jensen
 MunSic Jeong
+Chris Jerdonek
 Orjan Johansen
 Fredrik Johansson
 Gregory K. Johnson
